--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.2/vuex.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.1.3/vue-router.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.3.0/dist/bootstrap-vue.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.13.0/dist/bootstrap-vue.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.13.0/dist/bootstrap-vue.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vuelidate@0.7.5/dist/vuelidate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuelidate@0.7.5/dist/validators.min.js"></script>
@@ -31,9 +31,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script>
 
     <script>
-      var AUTH_API = 'https://testauth22.herokuapp.com/success/'
-      // var API = 'http://t.mutabor.cz/api'
-      var API = 'http://localhost:3000'
+      var API = 'http://app.local/api'
       axios.defaults.withCredentials = true
     </script>
     <script src="/main.js" type="module"></script>
